k8s/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  labels:
    app: api-gateway
    tier: edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        tier: edge
    spec:
      containers:
        - name: nginx
          image: genai-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /nginx_status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /nginx_status
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
