k8s/email-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: email
spec:
  selector:
    app: email
  ports:
    - name: http
      port: 8002
      targetPort: 8002
  type: ClusterIP
