k8s/rewrite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rewrite-service
  labels:
    app: rewrite
spec:
  selector:
    app: rewrite
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
